--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -82,3 +82,15 @@ form input[type=text] {
 .spinner img {
     padding: 10px;
 }
+
+.username .tweetText {
+    display: inline;
+}
+
+#roomSelect {
+    display: inline-block;
+}
+
+#message {
+    display: inline-block;
+}
